# SHU-2025-autumn-data-mining-and-knowledge-processing

./: .gitignore  README.md  run.bat
exp02-sentiment-classificationn/: .gitignore  README.md  config.yaml  pyproject.toml  run_comparison.sh  run_lab2.sh  run_lab3.sh  run_test_lab2.sh  run_test_lab3.sh
exp02-sentiment-classificationn/bert-sentential-classifer/: config.py  main.py
exp02-sentiment-classificationn/dataset/: readme.md
exp02-sentiment-classificationn/lab1_textcnn/: run_lab1.sh
exp02-sentiment-classificationn/lab1_textcnn/config/: config.md  requirements.txt
exp02-sentiment-classificationn/lab1_textcnn/results/: predictions.csv
exp02-sentiment-classificationn/lab1_textcnn/src/: main.py  model.py  utils.py  visualization.py
exp02-sentiment-classificationn/models/: README.md
exp02-sentiment-classificationn/qwen-sentential-classifier/: config.py  main.py  requirements.txt
exp02-sentiment-classificationn/results/lab2/: test_predictions_20251207_112357.csv  (+1 more)
exp02-sentiment-classificationn/src/: compare_traditional.py  plot_final_report.py  predict.py
exp03-medical-knowledge-graph/: .gitignore  Dockerfile  config.yaml  import_to_neo4j.sh  main.py  pyproject.toml  requirements.txt  run_extract_entity.sh  start_neo4j_server.sh
exp03-medical-knowledge-graph/download/: download_raw_data.py
exp03-medical-knowledge-graph/finetune/: prepare_data.py  train_bert.py
exp03-medical-knowledge-graph/models/: entity_extractor.py
exp03-medical-knowledge-graph/neo4j_data/: import_commands.cypher
exp03-medical-knowledge-graph/src/: build_graph.py  main.py
(+58 files in other folders)
