[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "exp02-sentiment-classification"  
version = "0.2.0"     

dependencies = [
    "torch>=2.0.0",  
    "transformers",   
    "scikit-learn",   
    "pandas",
    "numpy",
    "tqdm",           
    "matplotlib",    
    "seaborn"       
]